[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imbalancepricingforecastmodel"
version = "0.1.0"
description = "A Streamlit app for predicting System Sell / Buy Prices using TensorFlow."
authors = ["Jeff"]
dependencies = [
    "streamlit>=1.12.0",
    "pandas>=1.5.0",
    "numpy>=1.23.3",
    "matplotlib>=3.6.0",
    "scikit-learn>=1.1.2",
    "statsmodels>=0.13.2",
    "tensorflow>=2.10.0"
]

[tool.streamlit]
server.headless = true
